--- a/201/201Read01.md
+++ b/201/201Read01.md
@@ -6,6 +6,8 @@ Browser requests the
 Info from the server and
 It's sent back in chunks
 
+https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/How_the_Web_works
+
 ## Q2 Describe how HTML, CSS, and JS files are “parsed” in the browser.
 
 Parsing essentially means translating into a usable format. Occurs in a specific order.
@@ -14,9 +16,13 @@ HTML is parsed first. It sees style and script tags, and requests that informati
 
 Browser generates DOM tree from parsed HTML, CSSOM from parsed CSS, then compiles and executes parsed JS.
 
+https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/How_the_Web_works
+
 ## Q3 How can you find images to add to a Website?
 
 There are many places, Google Images is good and they have a copyright filter to select something you can use.
+
+https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/What_will_your_website_look_like
 
 ## Q4 How do you create a String vs a Number in JavaScript?
 
@@ -28,9 +34,13 @@ A number is any typed out number. Can't be in quotes or written out in words.
 
 Ex: 42
 
+https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics
+
 ## Q5 What is a Variable and why are they important in JavaScript?
 
 A variable is a stored piece of data. They are necessary to do anything interesting. Being changable (using let) makes it possible to be interactive.
+
+https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics
 
 -----
 
@@ -38,17 +48,25 @@ A variable is a stored piece of data. They are necessary to do anything interest
 
 An HTML attribute is extra information about an element. An example would be "class".
 
+https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Getting_started
+
 ## Q7 Describe the Anatomy of an HTMl element.
 
 An HTML element will have an opening tag, a closing tag, and the content which goes between them.
+
+https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Getting_started
 
 ## Q8 What is the Difference between <article> and <section> element tags?
 
 An article tag denotes a block of content that makes sense on its own. A section tag denotes groups of related content.
 
+https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Document_and_website_structure
+
 ## Q9 What Elements does a “typical” website include?
 
 A typical website will have a header, a navigation bar, the main content (which may be broken up into articles and sections), a sidebar, and a footer.
+
+https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Document_and_website_structure
 
 ## Q10 How does metadata influence Search Engine Optimization?
 
@@ -56,12 +74,15 @@ Metadata is data about the HTML, such as the author, and important keywords that
 
 Metadata is data that describes data.
 
+https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/The_head_metadata_in_HTML
 
 ## Q11 How is the <meta> HTML tag used when specifying metadata?
 
 The meta tag is how metadata is added to the head of a website.
 
 Ex: <meta charset="UTF-8">
+
+https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/The_head_metadata_in_HTML
 
 ----
 
@@ -70,9 +91,13 @@ Ex: <meta charset="UTF-8">
 
 When designing a website, the first step is project ideation (figuring out what you want the website to do and how)
 
+https://developer.mozilla.org/en-US/docs/Learn/Common_questions/Design_and_accessibility/Thinking_before_coding
+
 ## Q13 What is the most important question to answer when designing a Website?
 
 "What exactly do I want to accomplish?"
+
+https://developer.mozilla.org/en-US/docs/Learn/Common_questions/Design_and_accessibility/Thinking_before_coding
 
 -----
 
@@ -103,3 +128,6 @@ JavaScript is added to an HTML doc by linking to a JS file in the head of the HT
 ## Things to Look into Further:
 
 What exactly is an API and how does it relate to JS?
+
+How does JS add interactivity
+
