added information to the Things I Want To Know More About

--- a/201/201Read01.md
+++ b/201/201Read01.md
@@ -125,9 +125,12 @@ https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_Ja
 
 JavaScript is added to an HTML doc by linking to a JS file in the head of the HTML doc.
 
-## Things to Look into Further:
+## Things I want to know more about:
 
-What exactly is an API and how does it relate to JS?
+- What is the span tag?
 
-How does JS add interactivity
+- What exactly is an API and how does it relate to JS?
 
+- How does JS add interactivity?
+
+- How is the meta tag used? What information needs to go in there?
