answered through Q10 in 201 Read 02

--- a/201/201Read02.md
+++ b/201/201Read02.md
@@ -32,29 +32,80 @@ The "title" element must be added to provide the full expansion of the term.
 
 ### Q5 What are ways we can apply CSS to our HTML?
 
-[Source]()
+CSS can be applied to HTML by
+
+1. An external style sheet (preferred)
+
+2. An internal style sheet
+
+3. Inline styles
+
+[Source](https://developer.mozilla.org/en-US/docs/Learn/CSS/First_steps/How_CSS_is_structured)
 
 ### Q6 Why should we avoid using inline styles?
 
+Inline styles should be avoided because it is more difficult to read and understand, and because it is more difficult to update because any changes will need to be made in multiple locations within the document.
+
+[Source](https://developer.mozilla.org/en-US/docs/Learn/CSS/First_steps/How_CSS_is_structured)
+
 ### Q7 Review the block of code below and answer the following questions:
+
+>   h2 {
+>     color: black;
+>     padding: 5px;
+>   }
 
 #### A - What is representing the selector?
 
+h2
+
+[Source](https://developer.mozilla.org/en-US/docs/Learn/CSS/First_steps/How_CSS_is_structured#properties_and_values)
+
 #### B - Which components are the CSS declarations?
 
+A CSS declaration is a property with a value. So, color : black; is a declaration, as is "padding : 5 px;".
+
+[Source](https://developer.mozilla.org/en-US/docs/Learn/CSS/First_steps/How_CSS_is_structured#properties_and_values)
+
 #### C -Which components are considered properties?
+
+The property is the identifier within the declaration. So, color and padding are both properties.
+
+[Source](https://developer.mozilla.org/en-US/docs/Learn/CSS/First_steps/How_CSS_is_structured#properties_and_values)
 
 ## JS
 
 ### Q8 What data type is a sequence of text enclosed in single quote marks?
 
+A string
+
+[Source](https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics)
+
 ### Q9 List 4 types of JavaScript operators.
+
+- Addition operator (or subtraction, multiplication, and division)
+
+- Assignment operator (=)
+
+- Strict equality operator (===)
+
+- Bang operator (!)
+
+[Source](https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics)
 
 ### Q10 Describe a real world Problem you could solve with a Function.
 
+An example of a real world problem that can be solved with a function is to multiply any 2 given numbers.
+
+[Source](https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics#language_basics_crash_course)
+
 ### Q11 An if statement checks a __ and if it evaluates to ___, then the code block will execute.
 
+An if statement checks a **conditional**, and if it evaluates to **true**, then the code block will execute.
+
 ### Q12 What is the use of an else if?
+
+
 
 ### Q13 List 3 different types of comparison operators.
 
