completed the rest of the 201Read02.md Qs

--- a/201/201Read02.md
+++ b/201/201Read02.md
@@ -103,11 +103,28 @@ An example of a real world problem that can be solved with a function is to mult
 
 An if statement checks a **conditional**, and if it evaluates to **true**, then the code block will execute.
 
+[Source](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks/conditionals)
+
 ### Q12 What is the use of an else if?
 
+An "else if" is used if you want to combine more than two conditions.
 
+[Source](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks/conditionals)
 
 ### Q13 List 3 different types of comparison operators.
 
+- < or >, less than and greater than
+
+- <= or >=, less than or equal to and greater than or equal to
+
+- ===, strictly equal to
+
+[Source](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks/conditionals)
+
 ### Q14 What is the difference between the logical operator && and ||?
 
+The logical operator && denotes that **both** parts of the condition must be true for the condition to evaluate to true.
+
+The logial operator || denotes that **either** part of the condition may be true for the condition to evaluate to true.
+
+[Source](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks/conditionals#logical_operators_and_or_and_not)
