--- a/201/201Read02.md
+++ b/201/201Read02.md
@@ -123,8 +123,8 @@ An "else if" is used if you want to combine more than two conditions.
 
 ### Q14 What is the difference between the logical operator && and ||?
 
-The logical operator && denotes that **both** parts of the condition must be true for the condition to evaluate to true.
+- The logical operator "&&" denotes that **both** parts of the condition must be true for the condition to evaluate to true.
 
-The logial operator || denotes that **either** part of the condition may be true for the condition to evaluate to true.
+- The logial operator "||" denotes that **either** part of the condition may be true for the condition to evaluate to true.
 
 [Source](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks/conditionals#logical_operators_and_or_and_not)
