corrected formatting on Q14 again, added things I want to know more about

--- a/201/201Read02.md
+++ b/201/201Read02.md
@@ -125,6 +125,10 @@ An "else if" is used if you want to combine more than two conditions.
 
 - The logical operator "&&" denotes that **both** parts of the condition must be true for the condition to evaluate to true.
 
-- The logial operator "||" denotes that **either** part of the condition may be true for the condition to evaluate to true.
+- The other logial operator (which messes with my formatting when I try to put it here) denotes that **either** part of the condition may be true for the condition to evaluate to true.
 
 [Source](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks/conditionals#logical_operators_and_or_and_not)
+
+## Things I want to know more about
+
+- I'd like to know more about how the abbr tag in HTML works
