--- a/201/Readings/201Read04.md
+++ b/201/Readings/201Read04.md
@@ -48,11 +48,21 @@ ex - <span>
 
 ## Q6 ___ positioning is the default for every html element.
 
-
+Static.
 
 ## Q7 Name a few advantages to using absolute positioning on an element.
 
+[Source](https://css-tricks.com/absolute-relative-fixed-positioining-how-do-they-differ/#:~:text=This%20is%20a%20very%20powerful,right%20to%20set%20the%20location.)
+
+ Absolute positioning allows you to literally place any page element exactly where you want it. It is not affected by other elements and it doesn’t affect other elements.
+
 ## Q8 What is a key difference between fixed positioning and absolute positioning?
+
+[Source](https://www.w3.org/wiki/CSS_absolute_and_fixed_positioning?source=post_page#:~:text=Absolutely%20positioned%20elements%20are%20positioned,is%20always%20their%20containing%20block.)
+
+Elements with absolute positioning overlap other content unless you make room for them.
+
+Elements with fixed positioning always appear at the same place inside the browser window when viewed on screen.
 
 ## Learn JS
 
@@ -60,7 +70,13 @@ ex - <span>
 
 ## Q9 Describe the difference between a function declaration and a function invocation.
 
+A function declaration defines what a function takes in as a parameter and what functionality it will perform (output). Nothing happens when you define a function other than storing the definition in memory.
+
+A function invocation is where the function is acutally executed.
+
 ## Q10 What is the difference between a parameter and an argument?
+
+A parameter is the placeholder in the function and the argument is the actual value that is the input for the function.
 
 ## Misc
 
@@ -68,4 +84,8 @@ ex - <span>
 
 ## Q11 Pick 2 benefits to pair programming and reflect on how these benefits could help you on your coding journey.
 
+Pair programming is helpful because of the ability to learn from other students, and preparation for a job. Because there is so much to learn, pretty much any other student is going to know some things that I don't know and can help me learn new things. As well, it's very good practice for future jobs, as this is a standard practice in a professional environment.
+
 ## Things I want to know more about
+
+The CSS layout stuff is still kind of confusing. There is a lot of vocab to remember and keep track of whick type of positioning does what, and when each should be used.
