--- a/201/Readings/201Read06.md
+++ b/201/Readings/201Read06.md
@@ -1,27 +1,33 @@
-# Reading 6 - 
+# Reading 6 - Problem Domain, Objects, and the DOM
 
-## Q1
+## JavaScript Object Basics
 
-## Q2
+[Source](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Objects/Basics)
 
-## Q3
+### Q1 How would you describe an object to a non-technical friend you grew up with?
 
-## Q4
+And object is a packet of data (and, optionally, functionality) that has properties in the form of key:value pairs. For example, a car could be like an object in that it has a property of the color red and another property that is the manufacturer Toyota. This would be written out in JavaScript as:
 
-## Q5
+> let car = {
+    color: red,
+    manufacturer: Toyota}
 
-## Q6
+### Q2 What are some advantages to creating object literals?
 
-## Q7
+Creating object literals 
 
-## Q8
+### Q3 How do objects differ from arrays?
 
-## Q9
+### Q4 Give an example for when you would need to use bracket notation to access an object’s property instead of dot notation.
 
-## Q10
+### Q5 Evaluate the code below. What does the term this refer to and what is the advantage to using this?
 
-## Q11
+## Introduction to the DOM
 
-## Q12
+[Source](https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Introduction)
 
-## Things I want to know more about
+### Q6 What is the DOM?
+
+### Q7 Briefly describe the relationship between the DOM and JavaScript.
+
+### Things I want to know more about:
