--- a/201/Readings/201Read07.md
+++ b/201/Readings/201Read07.md
@@ -1,27 +1,23 @@
-# Reading 7 - 
+# Reading 7 - Object-Oriented Programming, HTML Tables
 
-## Q1
+[Source](https://github.com/codefellows/domain_modeling#domain-modeling)
 
-## Q2
+### Q1 Explain why we need domain modeling.
 
-## Q3
+[Source](https://developer.mozilla.org/en-US/docs/Learn/HTML/Tables/Basics)
 
-## Q4
+### Q2 Why should tables not be used for page layouts?
 
-## Q5
+### Q3 List and describe 3 different semantic HTML elements used in an HTML <table>.
 
-## Q6
+[Source](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Objects/Basics#introducing_constructors)
 
-## Q7
+### Q4 What is a constructor and what are some advantages to using it?
 
-## Q8
+### Q5 How does the term this differ when used in an object literal versus when used in a constructor?
 
-## Q9
+[Source](https://ui.dev/beginners-guide-to-javascript-prototype)
 
-## Q10
+### Q6 Explain prototypes and inheritance via an analogy from your previous work experience.
 
-## Q11
-
-## Q12
-
-## Things I want to know more about
+### Things I want to know more about
