added reading 9 questions

--- a/201/Readings/201Read09.md
+++ b/201/Readings/201Read09.md
@@ -1,27 +1,65 @@
-# Reading 9 - 
+# Reading 9 - Forms and JS Events
 
-## Q1
+## HTML Forms
 
-## Q2
+[Source: MDN, Your first form](https://developer.mozilla.org/en-US/docs/Learn/Forms/Your_first_form)
 
-## Q3
+### Q1 Why are forms so important in web development?
 
-## Q4
+Forms are important because they are one of the main points of interaction between a user and a website or application. They allow users to input data, which is usually either sent to a web server or used on the client-side immediately to update the interface.
 
-## Q5
+### Q2 When designing a form, what are some key things to keep in mind when it comes to user experience?
 
-## Q6
+*[Source: Smashing Magazine, UX And HTML5: Let’s Help Users Fill In Your Mobile Form (Part 1)](https://www.smashingmagazine.com/2018/08/ux-html5-mobile-form-part-1/)*
 
-## Q7
+- Visually grouping fields that belong together will also help users fill a form.
 
-## Q8
+- Display only the fields that people need, and ask for optional things at the end
 
-## Q9
+- Present fields in a single-column layout.
 
-## Q10
+- In portrait mode, display the label on top of the field. In landscape mode, put labels on the left and inputs on the right.
 
-## Q11
+### Q3 List 5 form elements and explain their importance.
 
-## Q12
+[Source: MDN, How to structure a web form](https://developer.mozilla.org/en-US/docs/Learn/Forms/How_to_structure_a_web_form)
 
-## Things I want to know more about
+* <form>: Formally defines a form and attributes that determine the form's behavior. Each time you want to create an HTML form, you must start it by using this element, nesting all the contents inside. 
+
+* <fieldset>: a convenient way to create groups of widgets that share the same purpose, for styling and semantic purposes.
+
+* <legend>: formally describes the purpose of the <fieldset> it is included inside.
+
+* <label>: the formal way to define a label for an HTML form widget.
+ 
+* <input>: where the user enters the data.
+
+## Learn JS
+
+[Source: MDN, Introduction to events](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks/Events)
+
+### Q4 How would you describe events to a non-technical friend?
+
+Events are user interactions that you write your code to prepare for, such as a user clicking a button.
+
+### Q5 When using the addEventListener() method, what 2 arguments will you need to provide?
+
+*[Source: w3, HTML DOM Element addEventListener()](https://www.w3schools.com/jsref/met_element_addeventlistener.asp)*
+
++ The event type to listen for
+
++ The function that will run when the event occurs
+
+### Q6 Describe the event object. Why is the target within the event object useful?
+
+The *event object* is an object that contains information about the event that has occurs.
+
+The *target* tells you which HTML element was interacted with and triggered the event.
+
+### Q7 What is the difference between event bubbling and event capturing?
+
+*Event bubbling* describes how the browser handles events targeted at nested elements. *Event capturing* is like event bubbling but the order is reversed: so instead of the event firing first on the innermost element targeted, and then on successively less nested elements, the event fires first on the least nested element, and then on successively more nested elements, until the target is reached.
+
+### Things I want to know more about:
+
+- Event objects, event bubbling, and event capturing 
