--- a/201/Readings/201Read10.md
+++ b/201/Readings/201Read10.md
@@ -1,27 +1,45 @@
-# Reading 10 - 
+# Reading 10 - Debugging
 
-## Q1
+[Source: MDN, What went wrong? Troubleshooting JavaScript](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_went_wrong)
 
-## Q2
+## Q1 Name some key differences between a Syntax Error and a Logic Error.
 
-## Q3
+- A **syntax error** is where there is a typo that causes your code not to run all the way. These are usually easy to fix.
 
-## Q4
+- **A logic error** means that the code ran, but not in the way that you expected. There are usually harder to fix.
 
-## Q5
+## Q2 List a few types of errors that you have encountered in past lab assignments and explain how you were able to correct them.
 
-## Q6
+- Uncaught TypeError: not a function. 
 
-## Q7
+The function was actually named something else.
 
-## Q8
+- SyntaxError: missing ) after argument
 
-## Q9
+Missing a close parens
 
-## Q10
+- Logic error
 
-## Q11
+I was using the document.getElementById incorrectly
 
-## Q12
+## Q3 How will this topic continue to influence your long term goals?
+
+It's good to know terminology for types of errors to communicate what's going on with others. The MDN reference is also good for figuring out the solutions to the errors listed.
+
+[Source: MDN, What are browser developer tools?](https://developer.mozilla.org/en-US/docs/Learn/Common_questions/Tools_and_setup/What_are_browser_developer_tools#the_javascript_debugger)
+
+## Q4 How would you describe the JavaScript Debugger tool and how it works to someone just starting out in software development?
+
+The debugger tool lets you pause running the code to walk through it line by line. I would describe it like proofreading a confusing page in a novel by reading through it line by line to figure out which part is confusing to the reader.
+
+## Q5 Define what a breakpoint is.
+
+A breakpoint is the spot where you want to pause the code running to check out what is happening.
+
+## Q6 What is the call stack?
+
+The call stack is the list of functions that are running, in order of when they started. The global stack frame is at the bottom, with the next oldest on top until you get to the function that is currently being executed.
 
 ## Things I want to know more about
+
+How to use the developer tools that are installed in Chrome. Also, what tools are in other browsers, and which are more convenient to use.
