--- a/201/Readings/201Read11.md
+++ b/201/Readings/201Read11.md
@@ -1,27 +1,27 @@
-# Reading 11 - 
+# Reading 11 - Readings: Audio, Video, Images
 
-## Q1
+[Source: MDN, Video and Audio Content](https://developer.mozilla.org/en-US/docs/Learn/HTML/Multimedia_and_embedding/Video_and_audio_content)
 
-## Q2
+## Q1 Explain how the ability to use video and audio on the web has evolved since the early 2000s.
 
-## Q3
+## Q2 Describe the use of the src and controls attributes in the <video> element.
 
-## Q4
+## Q3 Why is it important to have fallback content inside the <video> element?
 
-## Q5
+## Q4 Write a very short story where <audio> and <video> are characters.
 
-## Q6
+[Source: CSS Tricks, A Complete Guide to CSS Grid](https://css-tricks.com/snippets/css/complete-guide-grid/)
 
-## Q7
+## Q5 How does Grid layout differ from Flex?
 
-## Q8
+## Q6 Grid container, grid item, and grid line are a few important terms to understand when using Grid. Please describe these terms in a few sentences.
 
-## Q9
+[Source: MDN, Responsive Images](https://developer.mozilla.org/en-US/docs/Learn/HTML/Multimedia_and_embedding/Responsive_images)
 
-## Q10
+## Q7 Besides making a site visually appealing across different screen sizes, why should developers make images responsive?
 
-## Q11
+## Q8 Define the following <img> attributes srcset and sizes. Write an example of how they are used.
 
-## Q12
+## Q9 How is srcset more helpful for responsive images than CSS or JavaScript?
 
 ## Things I want to know more about
