--- a/201/Readings/201Read12.md
+++ b/201/Readings/201Read12.md
@@ -1,27 +1,41 @@
-# Reading 12 - 
+# Reading 12 - Chart.js, Canvas
 
-## Q1
+[Source: JavaScript Canvas](https://www.javascripttutorial.net/web-apis/javascript-canvas/)
 
-## Q2
+## Q1 What does the <canvas> allow a developer to acheive?
 
-## Q3
+It allows you to make 2D graphics using JavaScript.
 
-## Q4
+## Q2 What is the importance of the closing `</canvas> tag?
 
-## Q5
+The canvas element requires the closing tag canvas. Any content between the opening and closing tags is fallback content that will display only if the browser doesn’t support the canvas element.
 
-## Q6
+## Q3 Explain what the getContext() method does.
 
-## Q7
+The getContext() method returns a render context object.
 
-## Q8
+[Source: Chart.js](https://www.chartjs.org/docs/latest/)
 
-## Q9
+## Q4 What is Chart.js and how it can be brought into your project?
 
-## Q10
+Chart.js the most popular charting library for JavaScript developers. It can be used in the odd-duck project to create charts and graphs of the number of clicks each item received.
 
-## Q11
+## Q5 List 3 different Chart types you can create using Chart.js.
 
-## Q12
+- Bar Chart
+
+- Line Chart
+
+- Pie/Donut Chart
+
+## Q6 What are some advantages to displaying data via a chart over a table?
+
+[Source: Web Designer Depot](https://www.webdesignerdepot.com/2013/11/easily-create-stunning-animated-charts-with-chart-js/)
+
+## Q7 How could Chart.js aid your previously created applications visually?
+
+Chart.js could be used for the salmon-cookies project to make a bar chart displaying how many cookies were sold each hour.
 
 ## Things I want to know more about
+
+- How to integrate Chart.js with HTML/JavaScript
