--- a/201/Readings/201Read13.md
+++ b/201/Readings/201Read13.md
@@ -1,27 +1,21 @@
-# Reading 13 - 
+# Reading 13 - Local Storage
 
-## Q1
+[Source: Smashing Magazine, Local Storage and How to Use It](https://www.smashingmagazine.com/2010/10/local-storage-and-how-to-use-it/)
 
-## Q2
+## Q1 Why would a developer use local storage for a web application?
 
-## Q3
+Local storage is used because you don't have to have each user register with the site to store information. HTTP is *stateless*, so when the page refreshes all the information is gone.
 
-## Q4
+You can store caches of data locally, so you don't have to reload large volumes of data every time a page refreshes.
 
-## Q5
+## Q2 What information should not be stored in local storage?
 
-## Q6
+Any information you don't want the user to be able to clear shouldn't be kept in local storage.
 
-## Q7
+## Q3 Local storage can store what type of data? How would you convert it to that type before storing?
 
-## Q8
-
-## Q9
-
-## Q10
-
-## Q11
-
-## Q12
+Local storage can only store strings. To be stored locally, the data first has to be converted to strings with JSON.stringify(), and then it can be returned to its original form with JSON.parse().
 
 ## Things I want to know more about
+
+How was local storage developed? How does locally-stored data look to developers? Can they see the information that users input locally, if it's not accessible to the server?
