added questions and formatting to reading14

--- a/201/Readings/201Read14.md
+++ b/201/Readings/201Read14.md
@@ -1,27 +1,21 @@
-# Reading 14 - 
+# Reading 14 - CSS Effects
 
-## Q1
+[Source: Learn to Code - CSS Transforms](https://learn.shayhowe.com/advanced-html-css/css-transforms/)
 
-## Q2
+## Q1 What does a CSS transform allow the developer to do to an element?
 
-## Q3
+## Q2 Provide an example of a transform and how you could see that being used on a website.
 
-## Q4
+[Source: Learn to Code - Transitions and Animations](https://learn.shayhowe.com/advanced-html-css/transitions-animations/)
 
-## Q5
+## Q3 What does a CSS transition allow the developer to do to an element?
 
-## Q6
+## Q4 How does a CSS animation differ from a CSS transition?
 
-## Q7
+[Source: Web Designer Depot - 8 simple CSS3 transitions that will wow your users](https://www.webdesignerdepot.com/2014/05/8-simple-css3-transitions-that-will-wow-your-users)
 
-## Q8
+## Q5 What are some benefits to using CSS transitions on websites?
 
-## Q9
-
-## Q10
-
-## Q11
-
-## Q12
+## Q6 How this topic fit in with your long-term goals?
 
 ## Things I want to know more about
