added things i want to know more about

--- a/301/301Read01.md
+++ b/301/301Read01.md
@@ -54,3 +54,9 @@ Props are used in React to pass data between components.
 ### Q6: What is the flow of props?
 
 The flow of props is *uni-directional*, from parent component to child component.
+
+### Things I want to know more about
+
+- What is the difference between a library and a framework?
+
+- What does a fully-rendered, modern site using React look like?
