--- a/301/301Read02.md
+++ b/301/301Read02.md
@@ -10,12 +10,23 @@
 
 ### Q2: What is the very first thing to happen in the lifecycle of React?
 
-
+The Mounting Phase
 
 ### Q3: Put the following things in the order that they happen: componentDidMount, render, constructor, componentWillUnmount, React Updates
 
+1. constructor
+
+2. render
+
+3. React Updates
+
+4. componentDidMount
+
+5. componentWillUnmount
+
 ### Q4: What does componentDidMount do?
 
+The componentDidMount is used for handling network requests and setting up any subscriptions.
 
 ## Video: React State Vs Props
 
@@ -23,8 +34,16 @@
 
 ### Q5: What types of things can you pass in the props?
 
+Similar to an argument in a vanilla JS function, there are a lot of things that can be passed in the props, such as an initial count in counter.
+
 ### Q6: What is the big difference between props and state?
+
+With state, changes occur inside of the component. With props, changes come from outside the component and receive information from outside the component, such as from a parent component.
 
 ### Q7: When do we re-render our application?
 
+The application re-renders when there is a change in the component's state or props
+
 ### Q8: What are some examples of things that we could store in state?
+
+Data a user inputs, the current value of a counter
