answered things i want to know more about

--- a/301/301Read02.md
+++ b/301/301Read02.md
@@ -47,3 +47,7 @@ The application re-renders when there is a change in the component's state or pr
 ### Q8: What are some examples of things that we could store in state?
 
 Data a user inputs, the current value of a counter
+
+### Things I want to know more about
+
+How does the lifecycle of react apply to the work we've been doing in the labs?
