--- a/301/301Read03.md
+++ b/301/301Read03.md
@@ -64,3 +64,7 @@ const obj2 = {bar: "baz", y: 13};
 const mergedObj = {...obj1, ...obj2};
 
 This will make the new mergedObj equal to {foo: "bar", x: 42, bar: "baz", y:13}
+
+### Things I want to know more about
+
+Keys in React - is using the index as a key sufficient?
