--- a/301/301Read04.md
+++ b/301/301Read04.md
@@ -32,3 +32,4 @@ A ternary operator can be used to shorten conditional statements.
 
 ## Things I want to know more about
 
+What does a controlled component look like in practice?
