added things I want to know more about

--- a/301/301Read12.md
+++ b/301/301Read12.md
@@ -69,3 +69,7 @@ A 500 error means the the error was on the server end, not the user end.
 
 200 is default success message, means everything is successful.
 201 means successfully created an object, more specific
+
+## Things I want to know more about
+
+Of the things that we've been using, which things come from express and are not native to vanilla javascript?
